tests/custom-sysy2022/positive/c068_lib_getch.sy
int main() {
  int a = getch();
  int b = getch();
  putint(a + b);
  putch(10);
  return 0;
}
