tests/custom-sysy2022/negative/c098_neg_lex_02.sy
int main() {
  int a = 0xG1;
  return a;
}
